# NumberAccumulator

./: .gitignore  CMakeLists.txt  README.md
Scripts/: buildDebug.sh  buildRelease.sh
Scripts/FunctionalTests/: startClientTcp.sh
Src/: CMakeLists.txt
Src/Apps/Client/: CMakeLists.txt  ClientFacade.cpp  ClientFacade.h  ClientSettings.h  ClientSettingsParser.cpp  ClientSettingsParser.h  ClientTcpTransport.cpp  ClientTcpTransport.h  ClientTransport.cpp  ClientTransport.h  ClientUdpTransport.cpp  ClientUdpTransport.h  Constants.h  IClientTransport.h  main.cpp
Src/Apps/Client/Interfaces/: CMakeLists.txt  IClientTransport.h
Src/Apps/Client/Sources/: CMakeLists.txt  ClientFacade.cpp  ClientFacade.h  ClientSettings.h  ClientSettingsParser.cpp  ClientTcpTransport.cpp  ClientTcpTransport.h  ClientTransport.cpp  ClientTransport.h  ClientUdpTransport.cpp  Constants.h
Src/Apps/Client/Tests/: CMakeLists.txt  ClientTest.h  main.cpp
Src/Apps/Server/: CMakeLists.txt  Constants.h  ServerFacade.cpp  ServerFacade.h  ServerSettings.h  ServerSettingsParser.cpp  ServerSettingsParser.h  ServerTcpTransport.cpp  ServerTcpTransport.h  ServerTransport.cpp  ServerTransport.h  ServerUdpTransport.cpp  ServerUdpTransport.h  main.cpp
Src/Apps/Server/Interfaces/: CMakeLists.txt  IServerTransport.h
Src/Apps/Server/Sources/: CMakeLists.txt  Constants.h  ServerFacade.cpp  ServerFacade.h  ServerSettingsParser.cpp  ServerSettingsParser.h  ServerTcpTransport.cpp  ServerTcpTransport.h  ServerTransport.h  ServerUdpTransport.cpp
Src/Apps/Server/Tests/: CMakeLists.txt  ServerTest.h  main.cpp
Src/Interfaces/: CMakeLists.txt  ITransport.h  README.md
Src/Libs/: CMakeLists.txt  NumberParser.h
Src/Libs/Tests/: CMakeLists.txt  NumberParserTest.h  main.cpp
Tests/FunctionalTests/: README.md  start.sh  startClientHelp.sh  startClientUdp.sh  startServer.sh  startServerHelp.sh
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/AppsTests/: CMakeLists.txt
Tests/UnitTests/AppsTests/ClientTests/: CMakeLists.txt  ClientTest.h  SomeClientTest.h  main.cpp
Tests/UnitTests/AppsTests/ServerTests/: CMakeLists.txt  ServerTest.h  SomeServerTest.h  main.cpp
Tests/UnitTests/LibsTests/: CMakeLists.txt  NumberParserTest.h  SomeLibTest.h  main.cpp
